Work around PR#43839, by calling resizeterm() on SIGWINCH.